Fixed captions positions on mobile devices. Adjusted height of captions container so it's ~0.5em above the control bar. This ensures captions with line set to 'auto' display above the control bar. JW7-2123

--- a/src/css/imports/captions.less
+++ b/src/css/imports/captions.less
@@ -46,13 +46,13 @@
     }
     video::-webkit-media-text-track-container {
         // With 16 lines of captions, 1em ~= 6.25% of height
-        max-height: calc(100% - 6.25 * (@controlbar-height));
+        max-height: calc(97% - 6.25 * (@controlbar-height));
         line-height: 1.3em;
     }
 
     &.jw-flag-compact-player {
         video::-webkit-media-text-track-container {
-            max-height: calc(100% - 7.5 * (@controlbar-height));
+            max-height: calc(97% - 7.5 * (@controlbar-height));
         }
     }
 }
